2003-03-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/i_callbacks.nw: Fixed bug #43: "If gschemdoc is not install,
	gschem crashes", by changing exit to _exit.  Fix by Mario Klebsch.

2003-03-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* scheme/gschem.scm: Fixed the crashing bug when you press a
	"no-action" bound key.  Patch by Dan McMahill. Thanks.

2003-02-23 Ales Hvezda   <ahvezda@geda.seul.org>

        * noweb/g_rc.nw, noweb/i_vars.nw, noweb/x_print.nw: Applied Antonio's 
	no margin printing patch (with minor modifications).  Thanks.

        * noweb/g_rc.nw, noweb/i_vars.nw, noweb/x_print.nw: Renamed "limits" to
        "extents".
	
	* lib/system-gschemrc.in: Added new example usage of the output-type
	rc keyword, and also put in a note that "limits" should no longer be
	used.

2003-02-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gschemrc.in: Added comment to sort-component-library
	keyword that it is broken and that users should not use it.
	Filed bug #53.

2003-02-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/i_callbacks.nw: Fixed the annoying flicker if you keep
	executing the page next/prev commands.

	* noweb/gschem.nw: Applied patchlet from Steve Tell for disabling
	the guile 1.6.3 deprecated warnings.

	* README: Added note suggestion by Steve Tell about warning users
	that deprecated guile warnings are turned off.

2003-02-18 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Bumped version to 20030223

	* noweb/g_funcs.nw, noweb/x_menus.nw, scheme/gschem.scm: Applied
	Steve Tell's guile 1.6.3 patch. Thanks.

2003-02-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Applied Gabriel Paubert's warning reducing patch with
        a few minor mods.

2003-01-26 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/ru.po: Updated version from Andy Shevchenko

        * configure.in: Changed -fnative-struct to -mms-bitfields for
        gcc 3.2 mingw compiler (older mingw compilers are no longer 
        supported)
